[package]
name = "system76_ecflash"
version = "0.1.1"
edition = "2018"
description = "Flashing and querying with System76 Embedded Controllers"
license = "LGPL-2.1-or-later"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
repository = "https://github.com/system76/ecflash"

[lib]
name = "ecflash"

[dev-dependencies]
libc = "0.2"
redox_hwio = "0.1"
serialport = "3.3"
